--- a/src/pages/CV.astro
+++ b/src/pages/CV.astro
@@ -23,77 +23,71 @@
     As a seasoned public speaker and communicator, I excel in translating complex technical concepts into engaging narratives. Whether presenting to boards, leading workshops, or hosting a podcast, I engage audiences with clarity and insight. My passion for Product and AI is reflected in my regular contributions to my blog at proddr.com, where I share industry advancements and insights.
   </p>
   <h2>Experience</h2>
-  <div class="job flow">
-    <div class="job-title highlight">
-      <h3>Technical Product Owner - Vertu Motors Plc.</h3>
-      <p class="date">Aug 2022 - Present</p>
-    </div>
-    <p>
-      I am responsible for overseeing four eCommerce sites, a car leasing website, and a Warehouse Management System (WMS) for Vertu Motors Plc, a leading automotive retailer in the UK. My role involves working closely with cross-functional teams, including developers, designers, and marketers, to ensure that our digital products and systems meet the needs of our customers and deliver business value.
-    </p>
-    <h4>Achievements</h4>
-    <ul>
-      <li>Migrated four bespoke eComm sites to Shopify, reducing operating costs and increasing revenue</li>
-      <li>Implemented a "Customer First" methodolgy to our planning processes, reducing disagreement and increasing quality of releases</li>
-      <li>Defined clear roadmaps for all sites, based on customer insights and business value</li>
-      <li>Introduced structured testing and releases processes, reducing bug counts and customer service costs</li>
-    </ul>
-    <h4>Key Skills</h4>
-    <ul>
-      <li>Agile product management methodologies</li>
-      <li>Conducting customer interviews & surveys</li>
-      <li>Strong leadership and stakeholder management</li>
-      <li>Technical expertise is a largely marketing driven organisation</li>
-    </ul>
+  <div class="job-title highlight">
+    <h3>Technical Product Owner - Vertu Motors Plc.</h3>
+    <p class="date">Aug 2022 - Present</p>
   </div>
-  <div class="job flow">
-    <div class="job-title highlight">
-      <h3>Lead Business Analyst - The Climbing Hangar</h3>
-      <p class="date">Sep 2019 - Aug 2022</p>
-    </div>
-    <p>As a key member of the Senior Management Team at a growing climbing gym company, my role was centered on improving operations and guiding growth. I was responsible for setting the Key Performance Indicators (KPIs) that helped us measure our progress effectively. This approach was crucial as we expanded our staff from 80 to over 200 and doubled our number of gyms.</p>
-    <p>Beyond just managing data, my role involved enhancing our understanding of our customers. I introduced customer profiling and developed innovative reporting tools, revolutionizing how we viewed and interacted with our customers. This 'Customer First' mindset was pivotal in our business growth. I also streamlined our processes, from simplifying how we used our CRM system to conducting regular site audits for continuous improvement. Transitioning our reporting to cloud-based platforms like PowerBI greatly improved decision-making and data accessibility.</p>
-    <h4>Achievements</h4>
-    <ul>
-      <li>Redefined business KPIs to drive improved decision-making and performance</li>
-      <li>Implemented customer profiling, fundamentally changing our customer engagement strategy</li>
-      <li>Developed advanced reporting tools, enhancing business insights and customer understanding</li>
-      <li>Standardized CRM processes for greater efficiency and team consistency</li>
-      <li>Transitioned to cloud-based reporting and analytics, leading to more efficient and accurate data handling</li>
-    </ul>
-    <h4>Key Skills</h4>
-    <ul>
-      <li>Advanced data analysis and visualization, particularly with PowerBI and Salesforce</li>
-      <li>Cloud-based systems management and data warehousing</li>
-      <li>Process documentation and optimization</li>
-      <li>Customer-centric product management and strategic analysis</li>
-      <li>Effective project management and team leadership</li>
-    </ul>
+  <p>
+    I am responsible for overseeing four eCommerce sites, a car leasing website, and a Warehouse Management System (WMS) for Vertu Motors Plc, a leading automotive retailer in the UK. My role involves working closely with cross-functional teams, including developers, designers, and marketers, to ensure that our digital products and systems meet the needs of our customers and deliver business value.
+  </p>
+  <h4>Achievements</h4>
+  <ul class="list">
+    <li>Migrated four bespoke eComm sites to Shopify, reducing operating costs and increasing revenue</li>
+    <li>Implemented a "Customer First" methodolgy to our planning processes, reducing disagreement and increasing quality of releases</li>
+    <li>Defined clear roadmaps for all sites, based on customer insights and business value</li>
+    <li>Introduced structured testing and releases processes, reducing bug counts and customer service costs</li>
+  </ul>
+  <h4>Key Skills</h4>
+  <ul class="list">
+    <li>Agile product management methodologies</li>
+    <li>Conducting customer interviews & surveys</li>
+    <li>Strong leadership and stakeholder management</li>
+    <li>Technical expertise is a largely marketing driven organisation</li>
+  </ul>
+  <div class="job-title highlight">
+    <h3>Lead Business Analyst - The Climbing Hangar</h3>
+    <p class="date">Sep 2019 - Aug 2022</p>
   </div>
-  <div class="job flow">
-    <div class="job-title highlight">
-      <h3>Technical Manager - Arthur D. Riley & Co.</h3>
-      <p class="date">Mar 2014 - Jul 2017</p>
-    </div>
-    <p>Starting as a Database Administrator and growing into a pivotal role in IT systems management. My initial focus was on designing and maintaining databases for B2B and SaaS platforms, ensuring optimal system performance and reliability. As the company experienced rapid growth, scaling from 150 to over 400 employees, I stepped up to manage all IT infrastructures, which included leading strategic projects such as cloud migration.</p>
-    <p>My responsibilities expanded further during two major company mergers. In collaboration with Delivery and Sales Managers, I played a key role in ensuring the seamless integration of IT systems, maintaining uninterrupted service to our clients. Leading a diverse team, including developers, Database Administrators, and a QA Analyst, I focused on delivering multiple IT projects within set timelines and budgets, directly contributing to our company's operational excellence and client satisfaction.</p>
-    <h4>Achievements</h4>
-    <ul>
-      <li>Developed and launched Parking Enforcement software adopted by over 20 city councils in New Zealand, demonstrating significant product management capability</li>
-      <li>Led a successful cloud migration project, aligning with senior management to prioritize and transition critical systems</li>
-      <li>Played a key role in the seamless integration of IT systems during two company mergers, ensuring continuity and efficiency</li>
-      <li>Conducted regular penetration testing to identify and mitigate potential IT security vulnerabilities</li>
-      <li>Authored over 30 successful tender documents, contributing to new business acquisition and market expansion</li>
-    </ul>
-    <h4>Key Skills</h4>
-    <ul>
-      <li>Strategic planning and execution</li>
-      <li>Product Management</li>
-      <li>Team leadership and management</li>
-      <li>Client relationship management</li>
-      <li>Risk management and mitigation</li>
-    </ul>
+  <p>As a key member of the Senior Management Team at a growing climbing gym company, my role was centered on improving operations and guiding growth. I was responsible for setting the Key Performance Indicators (KPIs) that helped us measure our progress effectively. This approach was crucial as we expanded our staff from 80 to over 200 and doubled our number of gyms.</p>
+  <p>Beyond just managing data, my role involved enhancing our understanding of our customers. I introduced customer profiling and developed innovative reporting tools, revolutionizing how we viewed and interacted with our customers. This 'Customer First' mindset was pivotal in our business growth. I also streamlined our processes, from simplifying how we used our CRM system to conducting regular site audits for continuous improvement. Transitioning our reporting to cloud-based platforms like PowerBI greatly improved decision-making and data accessibility.</p>
+  <h4>Achievements</h4>
+  <ul class="list">
+    <li>Redefined business KPIs to drive improved decision-making and performance</li>
+    <li>Implemented customer profiling, fundamentally changing our customer engagement strategy</li>
+    <li>Developed advanced reporting tools, enhancing business insights and customer understanding</li>
+    <li>Standardized CRM processes for greater efficiency and team consistency</li>
+    <li>Transitioned to cloud-based reporting and analytics, leading to more efficient and accurate data handling</li>
+  </ul>
+  <h4>Key Skills</h4>
+  <ul class="list">
+    <li>Advanced data analysis and visualization, particularly with PowerBI and Salesforce</li>
+    <li>Cloud-based systems management and data warehousing</li>
+    <li>Process documentation and optimization</li>
+    <li>Customer-centric product management and strategic analysis</li>
+    <li>Effective project management and team leadership</li>
+  </ul>
+  <div class="job-title highlight">
+    <h3>Technical Manager - Arthur D. Riley & Co.</h3>
+    <p class="date">Mar 2014 - Jul 2017</p>
   </div>
+  <p>Starting as a Database Administrator and growing into a pivotal role in IT systems management. My initial focus was on designing and maintaining databases for B2B and SaaS platforms, ensuring optimal system performance and reliability. As the company experienced rapid growth, scaling from 150 to over 400 employees, I stepped up to manage all IT infrastructures, which included leading strategic projects such as cloud migration.</p>
+  <p>My responsibilities expanded further during two major company mergers. In collaboration with Delivery and Sales Managers, I played a key role in ensuring the seamless integration of IT systems, maintaining uninterrupted service to our clients. Leading a diverse team, including developers, Database Administrators, and a QA Analyst, I focused on delivering multiple IT projects within set timelines and budgets, directly contributing to our company's operational excellence and client satisfaction.</p>
+  <h4>Achievements</h4>
+  <ul class="list">
+    <li>Developed and launched Parking Enforcement software adopted by over 20 city councils in New Zealand, demonstrating significant product management capability</li>
+    <li>Led a successful cloud migration project, aligning with senior management to prioritize and transition critical systems</li>
+    <li>Played a key role in the seamless integration of IT systems during two company mergers, ensuring continuity and efficiency</li>
+    <li>Conducted regular penetration testing to identify and mitigate potential IT security vulnerabilities</li>
+    <li>Authored over 30 successful tender documents, contributing to new business acquisition and market expansion</li>
+  </ul>
+  <h4>Key Skills</h4>
+  <ul class="list">
+    <li>Strategic planning and execution</li>
+    <li>Product Management</li>
+    <li>Team leadership and management</li>
+    <li>Client relationship management</li>
+    <li>Risk management and mitigation</li>
+  </ul>
   <h2>Personal Projects</h2>
   <div class="project">
     <div class="highlight">
@@ -128,15 +122,15 @@
     <p>Pendo - 2023</p>
   </div>
   <div class="education">
-    <h3>Product Analytics Certification</h3>
+    <h3>Product Analytics Cert.</h3>
     <p>Pendo - 2023</p>
   </div>
   <div class="education">
-    <h3>Product-Led Certification</h3>
+    <h3>Product-Led Cert.</h3>
     <p>Pendo - 2023</p>
   </div>
   <div class="education">
-    <h3>Product Management Basics Certification</h3>
+    <h3>Product Management Basics Cert.</h3>
     <p>Pendo - 2023</p>
   </div>
   <div class="education">
@@ -155,7 +149,7 @@
   padding:0;
   margin:0;
   font-family: sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.6;
 }
 a {
@@ -205,11 +199,11 @@ h3 {
   font-style: italic;
   font-weight: normal;
 }
-.job ul {
+.list {
   margin-left: 1rem;
   padding-inline: 2rem;
 }
-.job li {
-  font-size: 0.8rem;
+.list li {
+  font-size: 1rem;
 }
 </style>
